<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cl.estencia.labs</groupId>
    <artifactId>muplayer</artifactId>
    <version>4.0.0-NEXT</version>
    <packaging>jar</packaging>

    <name>muplayer</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
    </properties>

    <developers>
        <developer>
            <name>Martin Pizarro Ascui</name>
            <email>martinpiz097@gmail.com</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>

        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <mainClass>cl.estencia.labs.muplayer.Main</mainClass>
                    <arguments>
                        <argument>--add-opens</argument>
                        <argument>java.desktop/com.sun.media.sound=ALL-UNNAMED</argument>
                        <argument>--add-exports</argument>
                        <argument>java.desktop/com.sun.media.sound=ALL-UNNAMED</argument>
                        <argument>--add-modules</argument>
                        <argument>java.logging</argument>
                    </arguments>
                </configuration>
            </plugin>

            <!--Con Dependencias dentro -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <finalName>${artifactId}</finalName>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>cl.estencia.labs.muplayer.Main</mainClass>
                        </transformer>
                    </transformers>
                </configuration>
            </plugin>

            <!--Compilacion nativa con GraalVM -> Requiere JDK 17 -->
            <!--<plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
            </plugin>-->
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>cl.estencia.labs</groupId>
            <artifactId>aucom</artifactId>
            <version>2.0.0</version>
        </dependency>

        <!--<dependency>
            <groupId>org.mpizutil</groupId>
            <artifactId>electrolist</artifactId>
            <version>3.0.1</version>
        </dependency>-->

        <dependency>
            <groupId>org.orangeplayer</groupId>
            <artifactId>logger</artifactId>
            <version>0.4.1</version>
        </dependency>

        <dependency>
            <groupId>org.orangeplayer.audiolibs</groupId>
            <artifactId>tritonus-jorbis</artifactId>
            <version>0.4</version>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>dev.mccue</groupId>-->
        <!--            <artifactId>vorbisspi</artifactId>-->
        <!--            <version>2024.04.19</version>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>com.googlecode.soundlibs</groupId>
            <artifactId>mp3spi</artifactId>
            <version>1.9.5.4</version>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>dev.mccue</groupId>-->
        <!--            <artifactId>mp3spi</artifactId>-->
        <!--            <version>2024.04.19</version>-->
        <!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>org.orangeplayer.audiolibs</groupId>-->
<!--            <artifactId>jaad</artifactId>-->
<!--            <version>0.9</version>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>org.orangeplayer.audiolibs</groupId>-->
<!--            <artifactId>jspeex-codec</artifactId>-->
<!--            <version>1.0</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>org.jflac</groupId>
            <artifactId>jflac-codec</artifactId>
            <version>1.5.2</version>
        </dependency>

        <dependency>
            <groupId>net.jthink</groupId>
            <artifactId>jaudiotagger</artifactId>
            <version>3.0.1</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.19.0</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <repositories>
        <repository>
            <id>clojars</id>
            <name>Clojars repository</name>
            <url>https://clojars.org/repo</url>
        </repository>
        <repository>
            <id>gitlab-martinpiz097-maven</id>
            <url>https://gitlab.com/api/v4/groups/3735432/-/packages/maven</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>clojars</id>
            <name>Clojars repository</name>
            <url>https://clojars.org/repo</url>
        </repository>
    </distributionManagement>
</project>
